Adding encounter voided.

--- a/HIV html forms/HIV Transfer In Form.html
+++ b/HIV html forms/HIV Transfer In Form.html
@@ -72,32 +72,32 @@
         <htmlformflowsheet formId="ce8bfb5d-4ec0-42b6-8fe0-0804f0aaf484" />
     </section>
     <section headerLabel="ALLERGIES ET EFFECTS SECONDAIRES">
-        <htmlformflowsheet formId="cdae7630-4556-4f7f-bdc4-546adc9cfd1a" />
+        <htmlformflowsheet formId="cdae7630-4556-4f7f-bdc4-546adc9cfd1a" windowHeight="750" />
     </section>
 
     <section headerLabel="HOSPITALISATIONS:">
-        <htmlformflowsheet formId="c7d0e826-2813-4203-a823-b4efe93f1f1f" />
+        <htmlformflowsheet formId="c7d0e826-2813-4203-a823-b4efe93f1f1f" windowHeight="550"/>
     </section>
 
     <section headerLabel="INFECTIONS OPPORTUNISTES">
-        <htmlformflowsheet formId="d802e26e-593a-4496-a8b4-1f8368357b5c" />
+        <htmlformflowsheet formId="d802e26e-593a-4496-a8b4-1f8368357b5c" windowHeight="450"/>
     </section>
 
     <section headerLabel="Diagnostic:">
-        <htmlformflowsheet formId="7704369c-d02c-4488-ae02-8ed9103ba5b8" />
+        <htmlformflowsheet formId="7704369c-d02c-4488-ae02-8ed9103ba5b8" windowHeight="550"/>
     </section>
 
 
     <section headerLabel="RESUME DES VISITES">
-        <htmlformflowsheet formId="23654cc2-d4bf-42ab-a13a-31f06139f48d" />
+        <htmlformflowsheet formId="23654cc2-d4bf-42ab-a13a-31f06139f48d" windowHeight="800"/>
     </section>
 
     <section headerLabel="SUIVI BIOLOGIQUE">
-        <htmlformflowsheet formId="76312336-616c-40ea-ae85-27c16e54dea6" />
+        <htmlformflowsheet formId="76312336-616c-40ea-ae85-27c16e54dea6" windowHeight="750"/>
     </section>
 
     <section headerLabel="SUIVI IMAGERIE">
-        <htmlformflowsheet formId="95808838-7d4a-4c48-903c-d49279a0d9a1" />
+        <htmlformflowsheet formId="95808838-7d4a-4c48-903c-d49279a0d9a1" windowHeight="400"/>
     </section>
 
     <br />
