--- a/NCD HTML forms/NCD Asthma flowsheet.html
+++ b/NCD HTML forms/NCD Asthma flowsheet.html
@@ -158,31 +158,31 @@
         <br />
         <div>
             <section headerLabel="DIAGNOSTIQUE ET LISTE DES PROBLÈME / DIAGNOSIS AND PROBLEM LIST">
-                <htmlformflowsheet formId="$@NCD_Asthma_Diagnosis_And_Problem_List@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_Asthma_Diagnosis_And_Problem_List@" sharedEncounter="true" windowHeight="400"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="RENDEZ-VOUS / CLINIC VISITS">
-                <htmlformflowsheet formId="$@NCD_RBC_ASTHMA_RENDEZ_VOUS@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_ASTHMA_RENDEZ_VOUS@" sharedEncounter="true" windowHeight="1000"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="AUTRE INVESTIGATIONS / OTHER INVESTIGATIONS">
-                <htmlformflowsheet formId="$@NCD_RBC_Asthma_Other_Investigations@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Asthma_Other_Investigations@" sharedEncounter="true" windowHeight="600"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="LISTE DES MEDICAMENTS / MEDICATION LIST">
-                <htmlformflowsheet formId="$@NCD_RBC_Asthma_medication_List@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Asthma_medication_List@" sharedEncounter="true" windowHeight="700"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="EXIT FROM CARE INFORMATION">
-                <htmlformflowsheet formId="$@NCD_Asthma_Exit_from_Care_Information@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_Asthma_Exit_from_Care_Information@" sharedEncounter="true" windowHeight="450"/>
             </section>
         </div>
         <br />
