--- a/NCD HTML forms/NCD DIABETES FLOW SHEET.html
+++ b/NCD HTML forms/NCD DIABETES FLOW SHEET.html
@@ -166,37 +166,37 @@
         <br />
         <div>
             <section headerLabel="RENDEZ-VOUS / CLINIC VISITS">
-                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_rendez-vous@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_rendez-vous@" sharedEncounter="true" windowHeight="900"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="AUTRE INVESTIGATIONS / OTHER INVESTIGATIONS">
-                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_Other_Investigations@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_Other_Investigations@" sharedEncounter="true" windowHeight="500"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="LISTE D'INSULINE / INSULIN LIST">
-                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_Insulin_List@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_Insulin_List@" sharedEncounter="true" windowHeight="500"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="LISTE DES MEDICAMENTS/ MEDICATION LIST">
-                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_Medication_List@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_Medication_List@" sharedEncounter="true" windowHeight="900"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="EXAMEN / EXAM">
-                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_MedicationExam@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_RBC_Diabetes_MedicationExam@" sharedEncounter="true" windowHeight="450"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="EXIT FROM CARE INFORMATION">
-                <htmlformflowsheet formId="$@NCD_DIABETES_Exit_from_Care_Information@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_DIABETES_Exit_from_Care_Information@" sharedEncounter="true" windowHeight="450"/>
             </section>
         </div>
         <br />
