--- a/NCD HTML forms/NCD HF_HTN_CKD flowsheet.html
+++ b/NCD HTML forms/NCD HF_HTN_CKD flowsheet.html
@@ -162,31 +162,31 @@
         <br />
         <div>
             <section headerLabel="DIAGNOSTIQUE ET LISTE DES PROBLÈME / DIAGNOSIS AND PROBLEM LIST">
-                <htmlformflowsheet formId="$@NCD_HF/HTN/CKD_Diagnosis_and_Problem_List@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_HF/HTN/CKD_Diagnosis_and_Problem_List@" sharedEncounter="true" windowHeight="450"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="RENDEZ-VOUS/ CLINIC VISITS">
-                <htmlformflowsheet formId="$@NCD_HF/HTN/CKD_Clinic_Visits@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_HF/HTN/CKD_Clinic_Visits@" sharedEncounter="true" windowHeight="800"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="AUTHRE INVESTIGATIONS/ OTHER STUDIES">
-                <htmlformflowsheet formId="$@NCD_HF/HTN/CKD_Other_Studies@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_HF/HTN/CKD_Other_Studies@" sharedEncounter="true" windowHeight="500"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="Echocardiographie/ Echocardiography">
-                <htmlformflowsheet formId="$@NC_HF/HTN/CKD_Echochardiography@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NC_HF/HTN/CKD_Echochardiography@" sharedEncounter="true" windowHeight="1000"/>
             </section>
         </div>
         <br />
         <div>
             <section headerLabel="LISTE DES MEDICAMENTS/ MEDICATION LIST">
-                <htmlformflowsheet formId="$@NCD_HF_HTN_CKD_Medication_List@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_HF_HTN_CKD_Medication_List@" sharedEncounter="true" windowHeight="900"/>
             </section>
         </div>
         <br />
@@ -198,17 +198,17 @@
         <br />
         <div>
             <section headerLabel="HEART FAILURE - EXIT FROM CARE INFORMATION">
-                <htmlformflowsheet formId="$@NCD_HEART_FAILURE_Exit_From_Care_Information@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_HEART_FAILURE_Exit_From_Care_Information@" sharedEncounter="true" windowHeight="500"/>
             </section>
         </div>
         <div>
             <section headerLabel="HEPERTENSION - EXIT FROM CARE INFORMATION">
-                <htmlformflowsheet formId="$@NCD_HEPERTENSION_Exit_from_Care_Information@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_HEPERTENSION_Exit_from_Care_Information@" sharedEncounter="true" windowHeight="500"/>
             </section>
         </div>
         <div>
             <section headerLabel="CHRONIC KIDNEY DISEASE - EXIT FROM CARE INFORMATION">
-                <htmlformflowsheet formId="$@NCD_CKD_Exit_from_Care_Information@" sharedEncounter="true" />
+                <htmlformflowsheet formId="$@NCD_CKD_Exit_from_Care_Information@" sharedEncounter="true" windowHeight="500"/>
             </section>
         </div>
     </table>
