--- a/Oncology HTML forms--this folder should be moved/Oncology - Non-Hodgkins Lymphoma(NHL) DST.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology - Non-Hodgkins Lymphoma(NHL) DST.html
@@ -1134,6 +1134,9 @@
         </table>
     </section>
     <br /><br /><br />
+
+    <encounterVoided/>
+
     <submit />
     <br /><br /><br />
     <b>STAGING KEY<br/>
